# numbers-game

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  build.rs
apps/backend/: Cargo.toml  build.rs
apps/backend/src/: game.rs  main.rs  util.rs
apps/backend/src/game/: http.rs  session.rs  ws.rs
apps/backend/src/game/session/: board.rs  map.rs
apps/backend/src/game/session/board/: config.rs
apps/backend/src/util/: direction_arrow.rs
apps/frontend/: .prettierignore  package-lock.json  package.json  svelte.config.js
apps/frontend/patches/: json-schema-to-typescript+15.0.4.patch
apps/frontend/src/lib/: types.ts
apps/frontend/src/routes/: +page.svelte
libs/types/: Cargo.toml
libs/types/src/: http.rs  lib.rs  main.rs  room_id.rs  ws.rs
res/: game_rules_v1.0.txt  procedure.pu  structure.pu
src/: handler.rs  main.rs  util.rs
src/handler/: file.rs  game.rs
src/handler/game/: http.rs  session.rs  structure.rs  ws.rs
src/handler/game/session/: map.rs
src/util/: deser_utils.rs  direction_arrow.rs
web/: .prettierrc.json  package-lock.json  package.json  room_info_example.json  types.ts  webpack.config.js
web/src/: game.html  game.js  index.html  index.js
web/src/game/: connection.js  draw.js  enum.js
