[workspace]
resolver = "3"
members = ["apps/backend", "libs/types"]

[profile.release]
panic = "abort"
lto = true

# temporary fix
# see https://github.com/serde-rs/serde/pull/2525
[patch.crates-io]
serde = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
serde_derive = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
serde_derive_internals = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
schemars = { git = "https://github.com/yuto0214w/schemars.git" }
