[package]
name = "numbers-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
futures-util = "0.3"
hyper = "1.6"
hyper-util = "0.1"
numbers-comm-types = { path = "../../libs/types" }
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.17", features = ["v4", "fast-rng", "serde"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
